# opencv_traincascade

./: .gitignore  CMakeLists.txt
scripts/: cascade_trainer.py  config.py  createsamples.pl  interface.py  mail.py  main.py  setup.py  utilities.py  utils.py  viola_setup.py
src/: vj_cross_validation.cpp
